force-app/main/default/objects/Contact/fields/HPC_SC_Date__c.field-meta.xml
<CustomField>
    <fullName>HPC_SC_Date__c</fullName>
    <description>Highest previous contribution amount (soft credit) for this contact</description>
    <inlineHelpText>Highest previous contribution (soft credit).</inlineHelpText>
    <label>HPC SC Date</label>
    <type>Date</type>
</CustomField>