force-app/main/default/objects/Contact/fields/Influencer_Network_Rank__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Network_Rank__c</fullName>
    <description>This field is used to rank the level of influence of a contact tagged with the &quot;Influencer Network Status&quot; field. This ranking system classifies the strength of relationships of Active and Potential Influencers and is mainly used by the Political Affairs team but can be applied EDF- wide.</description>
    <inlineHelpText>High: Has wide scope of influence and/or has strong connections to Federal lawmakers.
Medium: Has narrow scope of influence and has known connections to Federal lawmakers.
Low: Has narrow scope of influence and no known connections to Federal lawmaker</inlineHelpText>
    <label>Influencer Network Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>