force-app/main/default/objects/Contact/fields/Influencer_Network_Status__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Network_Status__c</fullName>
    <description>Program attribute</description>
    <inlineHelpText>Individuals who we know, who support EDF’s objectives, and who have a high level of influence in their communities and with Members of Congress, and in some cases, direct access to Members.</inlineHelpText>
    <label>Influencer Network Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Influencer</fullName>
            </value>
            <value>
                <fullName>Potential Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>