force-app/main/default/objects/Contact/fields/Initial_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Initial_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Set automatically, selecting from the oldest created Donation or Action record select the record&apos;s Campaign value.</inlineHelpText>
    <label>Initial Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>