force-app/main/default/objects/Contact/fields/Initial_Constituency__c.field-meta.xml
<CustomField>
    <fullName>Initial_Constituency__c</fullName>
    <inlineHelpText>Set automatically, capturing the initial Constituency value set for the Contact.  If multiple entered initially, 1st in alphabetical order is selected.</inlineHelpText>
    <label>Initial Constituency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>