force-app/main/default/objects/Contact/fields/iWave_ProScore_Date__c.field-meta.xml
<CustomField>
    <fullName>iWave_ProScore_Date__c</fullName>
    <label>iWave ProScore Date</label>
    <type>Date</type>
</CustomField>