force-app/main/default/objects/Contact/fields/LastNameDblMetaphone1__c.field-meta.xml
<CustomField>
    <fullName>LastNameDblMetaphone1__c</fullName>
    <description>Created as a part of Data Migration Heller 2021.</description>
    <label>LastNameDblMetaphone1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>