force-app/main/default/objects/Contact/fields/LastNameDblMetaphone2__c.field-meta.xml
<CustomField>
    <fullName>LastNameDblMetaphone2__c</fullName>
    <description>Created as a part of Data Migration 2021</description>
    <label>LastNameDblMetaphone2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>