force-app/main/default/objects/Contact/fields/Latest_Workplace_Giving_Year__c.field-meta.xml
<CustomField>
    <fullName>Latest_Workplace_Giving_Year__c</fullName>
    <inlineHelpText>Year of last workplace giving gift</inlineHelpText>
    <label>Latest Workplace Giving Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>