force-app/main/default/objects/Contact/fields/LCRM_Address_Correction_Status__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Address_Correction_Status__c</fullName>
    <label>LCRM Address Correction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standardization Pending</fullName>
            </value>
            <value>
                <fullName>Manually Set</fullName>
            </value>
            <value>
                <fullName>Standardized</fullName>
            </value>
            <value>
                <fullName>Not Standardized - Unknown Address</fullName>
            </value>
            <value>
                <fullName>Not Standardized - Incomplete Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>