force-app/main/default/objects/Contact/fields/LCRM_Duplicate_Match_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Duplicate_Match_Check_Status__c</fullName>
    <description>Field created for Heller migration 2021.</description>
    <label>LCRM Duplicate Match Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Check</fullName>
            </value>
            <value>
                <fullName>Does Not Need Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>