force-app/main/default/objects/Contact/fields/LCRM_Email_Hash__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Email_Hash__c</fullName>
    <description>Field created for Heller migration 2021.</description>
    <label>LCRM Email Hash</label>
    <length>80</length>
    <type>Text</type>
</CustomField>