force-app/main/default/objects/Contact/fields/LCRM_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Last_Modified_By__c</fullName>
    <description>Created as a part of Data migration Heller 2021.</description>
    <label>LCRM Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>