force-app/main/default/objects/Contact/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <description>Field created for Heller migration 2021.</description>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>