force-app/main/default/objects/Contact/fields/Less_Email__c.field-meta.xml
<CustomField>
    <fullName>Less_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Less Email</label>
    <type>Checkbox</type>
</CustomField>