force-app/main/default/objects/Contact/fields/LGC_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>LGC_Review_Date__c</fullName>
    <label>LGC Review Date</label>
    <type>Date</type>
</CustomField>