force-app/main/default/objects/Contact/fields/Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Maiden_Name__c</fullName>
    <description>Created as part of Data Migration Heller 2021.</description>
    <label>Maiden Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>