force-app/main/default/objects/Contact/fields/Membership_Leader_contact__c.field-meta.xml
<CustomField>
    <fullName>Membership_Leader_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A  membership donor who has given a cumulative amount of $500 or more in the current or previous 3 calendar year.</description>
    <inlineHelpText>A  membership donor who has given a cumulative amount of $500 or more in the current or previous 3 calendar year</inlineHelpText>
    <label>Membership Leader</label>
    <type>Checkbox</type>
</CustomField>