force-app/main/default/objects/Contact/fields/Modified_by_Flow__c.field-meta.xml
<CustomField>
    <fullName>Modified_by_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Contact record was modified by Phone/Email record flow for additional flow usage.</description>
    <label>Modified by Flow?</label>
    <type>Checkbox</type>
</CustomField>