force-app/main/default/objects/Contact/fields/MRC_Date_Contact__c.field-meta.xml
<CustomField>
    <fullName>MRC_Date_Contact__c</fullName>
    <description>Formula based on ‘MRC HC Date’ (Customizable Rollup) and ‘MRC SC Date’ (DLRS). Soft credit is defined by OCR = Funder - Soft Credit, DAF, Workplace Giving, Sponsor, Agency. Qualifying stages = Received, Received as Unconditional Pledge, Received as Conditional Pledge. All Opp Record Types except PG. Only the master field should be accessible to users.</description>
    <formula>IF((ISBLANK(MRC_SC_Date_Contact__c ) &amp;&amp; NOT(ISBLANK(MRC_HC_Date_Contact__c )))=TRUE, MRC_HC_Date_Contact__c , 
			IF((ISBLANK(MRC_HC_Date_Contact__c ) &amp;&amp; NOT(ISBLANK(MRC_SC_Date_Contact__c )))=TRUE, MRC_SC_Date_Contact__c , 
			IF((MRC_SC_Date_Contact__c &gt; MRC_HC_Date_Contact__c ), MRC_SC_Date_Contact__c , 
			MRC_HC_Date_Contact__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Close Date of the most recent received Opportunity where the Contact has a hard or soft credit (Planned Gifts not included).</inlineHelpText>
    <label>MRC Date</label>
    <type>Date</type>
</CustomField>