force-app/main/default/objects/Contact/fields/MRC_HC_Date_Contact__c.field-meta.xml
<CustomField>
    <fullName>MRC_HC_Date_Contact__c</fullName>
    <description>Date of most recent contribution (hard credit).</description>
    <inlineHelpText>Date of most recent contribution (hard credit).</inlineHelpText>
    <label>MRC HC Date</label>
    <type>Date</type>
</CustomField>