force-app/main/default/objects/Contact/fields/MRC_SC_Amount_Contact__c.field-meta.xml
<CustomField>
    <fullName>MRC_SC_Amount_Contact__c</fullName>
    <description>Most recent contribution amount (soft credit).</description>
    <inlineHelpText>Most recent contribution amount (soft credit).</inlineHelpText>
    <label>MRC SC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>