force-app/main/default/objects/Contact/fields/MRC_SC_Date_Contact__c.field-meta.xml
<CustomField>
    <fullName>MRC_SC_Date_Contact__c</fullName>
    <description>Date of most recent contribution (soft credit).</description>
    <inlineHelpText>Date of most recent contribution (soft credit).</inlineHelpText>
    <label>MRC SC Date</label>
    <type>Date</type>
</CustomField>