force-app/main/default/objects/Contact/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <description>Created as a part of Data Migration Heller 2021.</description>
    <label>Municipality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>