force-app/main/default/objects/Contact/fields/MySQL_ID__c.field-meta.xml
<CustomField>
    <fullName>MySQL_ID__c</fullName>
    <externalId>true</externalId>
    <label>MySQL_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>