force-app/main/default/objects/Contact/fields/NC_PAC_Last_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>NC_PAC_Last_Opt_In_Date__c</fullName>
    <label>NC PAC Last Opt In Date</label>
    <type>Date</type>
</CustomField>