force-app/main/default/objects/Contact/fields/NetSuite_Constituent__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Constituent__c</fullName>
    <label>NetSuite - Constituent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>