force-app/main/default/objects/Contact/fields/NetSuite_Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Constituent_ID__c</fullName>
    <label>NetSuite - Constituent ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>