force-app/main/default/objects/Contact/fields/No_C4_Communication__c.field-meta.xml
<CustomField>
    <fullName>No_C4_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No C4 Communication</label>
    <type>Checkbox</type>
</CustomField>