force-app/main/default/objects/Contact/fields/No_Development_Trips__c.field-meta.xml
<CustomField>
    <fullName>No_Development_Trips__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Development Trips</label>
    <type>Checkbox</type>
</CustomField>