force-app/main/default/objects/Contact/fields/No_Development_Visits__c.field-meta.xml
<CustomField>
    <fullName>No_Development_Visits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Development Visits</label>
    <type>Checkbox</type>
</CustomField>