force-app/main/default/objects/Contact/fields/No_Exchange__c.field-meta.xml
<CustomField>
    <fullName>No_Exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not exchange name with other organizations</inlineHelpText>
    <label>No Exchange</label>
    <type>Checkbox</type>
</CustomField>