force-app/main/default/objects/Contact/fields/No_invitations__c.field-meta.xml
<CustomField>
    <fullName>No_invitations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No invitations</label>
    <type>Checkbox</type>
</CustomField>