force-app/main/default/objects/Contact/fields/No_mass_email__c.field-meta.xml
<CustomField>
    <fullName>No_mass_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not send email to this constituent</description>
    <inlineHelpText>Do not send email to this constituent</inlineHelpText>
    <label>No mass email</label>
    <type>Checkbox</type>
</CustomField>