force-app/main/default/objects/Contact/fields/No_Member_Leadership_Treatment__c.field-meta.xml
<CustomField>
    <fullName>No_Member_Leadership_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if constituent has asked not to receive membership leadership treatment</description>
    <inlineHelpText>Check if constituent has asked not to receive membership leadership treatment</inlineHelpText>
    <label>No Member Leadership Treatment</label>
    <type>Checkbox</type>
</CustomField>