force-app/main/default/objects/Contact/fields/No_Paper_Acknowledgements__c.field-meta.xml
<CustomField>
    <fullName>No_Paper_Acknowledgements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capture when a member requests to not receive a paper acknowledgment/receipt, we want to accommodate the request.</description>
    <label>No Paper Acknowledgements</label>
    <type>Checkbox</type>
</CustomField>