force-app/main/default/objects/Contact/fields/No_Paper_Mail__c.field-meta.xml
<CustomField>
    <fullName>No_Paper_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if donor does not want to receive paper mail</inlineHelpText>
    <label>No Paper Mail</label>
    <type>Checkbox</type>
</CustomField>