force-app/main/default/objects/Contact/fields/No_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>No_Personal_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No individual email should be sent to this constituent</description>
    <inlineHelpText>No individual email should be sent to this constituent</inlineHelpText>
    <label>No Personal Email</label>
    <type>Checkbox</type>
</CustomField>