force-app/main/default/objects/Contact/fields/No_phone__c.field-meta.xml
<CustomField>
    <fullName>No_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not contact this constituent by phone</description>
    <inlineHelpText>Do not contact this constituent by phone</inlineHelpText>
    <label>No phone</label>
    <type>Checkbox</type>
</CustomField>