force-app/main/default/objects/Contact/fields/No_Planned_Giving_Cultivation__c.field-meta.xml
<CustomField>
    <fullName>No_Planned_Giving_Cultivation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No Planned Giving Cultivation</description>
    <inlineHelpText>Check if contact should not receive PG cultivations</inlineHelpText>
    <label>No Planned Giving Cultivation</label>
    <type>Checkbox</type>
</CustomField>