force-app/main/default/objects/Contact/fields/No_Planned_Giving_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>No_Planned_Giving_Solicitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No Planned Giving soliciations</description>
    <inlineHelpText>Check if contact should not receive planned giving solicitations</inlineHelpText>
    <label>No Planned Giving Solicitation</label>
    <type>Checkbox</type>
</CustomField>