force-app/main/default/objects/Contact/fields/No_Reports__c.field-meta.xml
<CustomField>
    <fullName>No_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the donor does not want to receive reports</inlineHelpText>
    <label>No Reports</label>
    <type>Checkbox</type>
</CustomField>