force-app/main/default/objects/Contact/fields/No_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>No_Solicitation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the donor does not want to receive solicitations</inlineHelpText>
    <label>No Solicitation</label>
    <type>Checkbox</type>
</CustomField>