force-app/main/default/objects/Contact/fields/No_Teleconference__c.field-meta.xml
<CustomField>
    <fullName>No_Teleconference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the donor does not want to participate in teleconferences</inlineHelpText>
    <label>No Teleconference</label>
    <type>Checkbox</type>
</CustomField>