force-app/main/default/objects/Contact/fields/No_Text__c.field-meta.xml
<CustomField>
    <fullName>No_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Text</label>
    <type>Checkbox</type>
</CustomField>