force-app/main/default/objects/Contact/fields/No_Upfront_Premiums__c.field-meta.xml
<CustomField>
    <fullName>No_Upfront_Premiums__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the donor does not want to receive upfront premiums</inlineHelpText>
    <label>No Upfront Premiums</label>
    <type>Checkbox</type>
</CustomField>